<resources>
    <string name="app_name">GitHubSearch</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Search for users and repos</string>
    <string name="search_text">Search</string>
    <string name="title_activity_user_detailed">User Details</string>
    <string name="avatar_description">Avatar Image</string>
    <string name="title_stars">Stars</string>
    <string name="title_followers">Followers</string>
</resources>
